# Calign-development

./: .gitignore  LICENCE  MANIFEST.in  README.md  pyproject.toml  setup.py
calign/: __init__.py  core.py
notebooks/: epitopos.fasta  how_to_use_calign.ipynb  proteina.fasta
