[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calign"
version = "1.0.0"
description = "A Python package for aligning epitopes to protein sequences"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "André Luiz Caliari Costa", email = "alcc.biology@gmail.com"},
    {name = "André Luiz Caliari Costa", email = "andre.costa@sou.unifal-mg.edu.br"},
    {name = "Leonardo Pereira de Araújo", email = "leonardo.araujo@sou.unifal-mg.edu.br"},
    {name = "Evandro Neves Silva", email = "evandro.silva@sou.unifal-mg.edu.br"},
    {name = "Patrícia Paiva Corsetti", email = "patricia.corsetti@unifal-mg.edu.br"},
    {name = "Leonardo Augusto de Almeida", email = "leonardo.almeida@unifal-mg.edu.br"},
]


keywords = ["bioinformatics", "epitope", "alignment", "protein", "sequence"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: proprietary software",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "biopython>=1.79",
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/calign"
Documentation = "https://github.com/yourusername/calign#readme"
Repository = "https://github.com/yourusername/calign"
Issues = "https://github.com/yourusername/calign/issues"